# study

./: .editorconfig  .gitignore  .gitmodules  README.md
bitcask/: .gitignore  README.md  go.mod  main.go
bitcask/bitcask/: bitcask.go  command.go  command_test.go  datafile.go  datafile_test.go  db.go  db_test.go  directory.go  go.mod  keydir.go  keydir_test.go  record.go
consistent-hashing/: Cargo.toml
consistent-hashing/src/: main.rs
exercism/: flake.nix
leetcode/: flake.nix  justfile
leetcode/code/: 1.two-sum.rs  10.regular-expression-matching.rs  11.container-with-most-water.rs  1448.count-good-nodes-in-binary-tree.rs  15.3sum.rs  1550.three-consecutive-odds.rs  17.letter-combinations-of-a-phone-number.rs  19.remove-nth-node-from-end-of-list.rs  1931.painting-a-grid-with-three-different-colors.rs  2.add-two-numbers.rs  20.valid-parentheses.rs  2094.finding-3-digit-even-numbers.rs  21.merge-two-sorted-lists.rs  22.generate-parentheses.rs  23.merge-k-sorted-lists.rs  25.reverse-nodes-in-k-group.py  2900.longest-unequal-adjacent-groups-subsequence-i.rs  2901.longest-unequal-adjacent-groups-subsequence-ii.rs  3.longest-substring-without-repeating-characters.rs  33.search-in-rotated-sorted-array.py  33.search-in-rotated-sorted-array.rs  3312.sorted-gcd-pair-queries.rs  3335.total-characters-in-string-after-transformations-i.rs  3337.total-characters-in-string-after-transformations-ii.rs  3355.zero-array-transformation-i.rs  36.valid-sudoku.py  39.combination-sum.py  39.combination-sum.rs  4.median-of-two-sorted-arrays.rs  40.combination-sum-ii.rs  42.trapping-rain-water.rs  5.longest-palindromic-substring.rs  518.coin-change-ii.rs  543.diameter-of-binary-tree.rs  7.reverse-integer.rs  75.sort-colors.py  75.sort-colors.rs  994.rotting-oranges.rs
leetcode/count-the-number-of-complete-components/: go.mod  main.go
leetcode/find-all-possible-recipes-from-given-supplies/: go.mod  main.go
leetcode/longest-nice-subarray/: go.mod  main.go
pingcap-bitcask/rust/bitcask/: Cargo.toml
pingcap-bitcask/rust/bitcask/src/: command.rs  directory.rs  error.rs  kvs.rs  lib.rs  merger.rs  options.rs
pingcap-bitcask/rust/kvs/: .gitignore  Cargo.toml  README.md
pingcap-bitcask/rust/kvs/benches/: benches.rs  benches_pool.rs
pingcap-bitcask/rust/kvs/src/: command.rs  datafile.rs  directory.rs  error.rs  kvs.rs  lib.rs  merger.rs  options.rs  parser.rs
pingcap-bitcask/rust/kvs/src/kvs/: engine.rs  kv.rs  mod.rs  sled.rs  store.rs
pingcap-bitcask/rust/kvs/src/log/: finder.rs  mod.rs  reader.rs  writer.rs
pingcap-bitcask/rust/kvs/src/net/: client.rs  protocol.rs  server.rs
pingcap-bitcask/rust/kvs/src/pool/: mod.rs
pingcap-bitcask/rust/kvs/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared.rs
pingcap-bitcask/rust/kvs/tests/: cli.rs  tests.rs
ratelimiter/: Cargo.toml  config.yaml  docker-compose.yml  flake.nix  justfile  readme.md
ratelimiter/appconfig/: Cargo.toml
ratelimiter/ratelimiter/: Cargo.toml  Dockerfile  docker-compose.yml
ratelimiter/ratelimiter/src/: fixed_window_counter.rs  lib.rs  main.rs  sliding_window_counter.rs  sliding_window_log.rs  token_bucket.rs  token_bucket_naive.rs  token_bucket_valkey.rs
ratelimiter/ratelimiter/src/algo/: fixed_window.rs  leaky_bucket.rs  mod.rs  sliding_window_counter.rs  sliding_window_log.rs  token_bucket.rs
ratelimiter/rust/: Cargo.toml
ratelimiter/rust/src/: main.rs
systems/: flake.nix
tdop/: README.md  justfile  main.py  pyproject.toml
(+56 files in other folders)
