[package]
name = "ratelimiter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
appconfig = { path = "../appconfig" }
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.20"
clap = { version = "4.5.40", features = ["derive"] }
redis = "0.32.2"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
