[package]
name = "kvs"
version = "0.1.0"
authors = ["Khanh Duong Quoc <dqkqdlot@gmail.com>"]
description = "A key-value store"
repository = "https://github.com/dqkqd/study/tree/main/pingcap-bitcask/rust/bitcask"
keywords = ["bitcask", "key-value store", "kvs"]
categories = ["database"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "kvs-client"
path = "src/bin/kvs_client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs_server.rs"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.14.0"
walkdir = "2.5.0"

[dependencies]
thiserror = "2.0.9"
bson = "2.13.0"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
glob = "0.3.1"
