[package]
name = "kvs"
version = "0.1.0"
authors = ["Khanh Duong Quoc <dqkqdlot@gmail.com>"]
description = "A key-value store"
repository = "https://github.com/dqkqd/study/tree/main/pingcap-bitcask/rust/bitcask"
keywords = ["bitcask", "key-value store", "kvs"]
categories = ["database"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "kvs-client"
path = "src/bin/kvs_client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs_server.rs"

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "benches_pool"
harness = false

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.5.1"
crossbeam-utils = "0.8.21"
num_cpus = "1.16.0"
panic-control = "0.1.4"
predicates = "3.1.2"
rand = { version = "0.8.5" }
rand_chacha = "0.3.1"
tempfile = "3.14.0"
walkdir = "2.5.0"

[dependencies]
thiserror = "2.0.9"
bson = "2.13.0"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
serde = { version = "1.0.216", features = ["derive"] }
glob = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sled = { version = "0.34.7", features = ["testing"] }
rayon = "1.10.0"
ctrlc = "3.4.5"
dashmap = "6.1.0"
